--- a/styles.css
+++ b/styles.css
@@ -105,3 +105,13 @@
     display: block;
     margin-bottom: 0.5rem;
   }
+  
+  @media screen and (max-width: 768px) {
+    nav ul {
+      flex-direction: column;
+    }
+  
+    nav li {
+      margin-bottom: 1rem;
+    }
+  }
