--- a/styles.css
+++ b/styles.css
@@ -105,7 +105,7 @@
     display: block;
     margin-bottom: 0.5rem;
   }
-  
+
   @media screen and (max-width: 768px) {
     nav ul {
       flex-direction: column;
@@ -115,3 +115,49 @@
       margin-bottom: 1rem;
     }
   }
+  /* Add this at the end of your styles.css file */
+
+.hamburger-menu {
+    display: none;
+    flex-direction: column;
+    justify-content: space-around;
+    width: 2rem;
+    height: 2rem;
+    cursor: pointer;
+  }
+  
+  .hamburger-menu span {
+    width: 100%;
+    height: 4px;
+    background-color: white;
+  }
+  
+  .nav-links {
+    transition: max-height 0.5s ease-in;
+  }
+  
+  @media screen and (max-width: 768px) {
+    .hamburger-menu {
+      display: flex;
+    }
+  
+    nav ul.nav-links {
+      display: none;
+      flex-direction: column;
+      align-items: center;
+      max-height: 0;
+      overflow: hidden;
+      transition: max-height 0.5s ease-out;
+    }
+  
+    nav ul.nav-links.show {
+      display: flex;
+      max-height: 300px;
+      padding: 1rem 0;
+    }
+  
+    nav li {
+      margin-bottom: 1rem;
+    }
+  }
+  
