--- a/styles.css
+++ b/styles.css
@@ -137,6 +137,10 @@
   }
   
   @media screen and (max-width: 768px) {
+    nav ul {
+      display: none;
+    }
+    
     .hamburger-menu {
       display: flex;
     }
@@ -160,4 +164,3 @@
       margin-bottom: 1rem;
     }
   }
-  
