--- a/styles.css
+++ b/styles.css
@@ -137,15 +137,11 @@
   }
   
   @media screen and (max-width: 768px) {
-    nav ul {
-      display: none;
-    }
-    
     .hamburger-menu {
       display: flex;
     }
   
-    nav ul.nav-links {
+    nav ul {
       display: none;
       flex-direction: column;
       align-items: center;
@@ -154,7 +150,7 @@
       transition: max-height 0.5s ease-out;
     }
   
-    nav ul.nav-links.show {
+    nav ul.show {
       display: flex;
       max-height: 300px;
       padding: 1rem 0;
