--- a/styles.css
+++ b/styles.css
@@ -11,11 +11,11 @@
     font-family: 'Roboto', sans-serif;
     line-height: 1.6;
     color: #333;
-    background-color: #FDBB30;
+    background-color: #fece44;
   }
   
   header {
-    background-color: #0038A8;
+    background-color: #0561ab;
     color: white;
     text-align: center;
     padding: 1rem;
@@ -29,8 +29,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: #0038A8;
-    padding: 1rem 0;
+    background-color: #0561ab;
   }
   
   nav ul {
@@ -48,10 +47,12 @@
     padding: 0.5rem;
     font-weight: bold;
     transition: background-color 0.3s;
+    border-radius: 8px;
   }
   
   nav a:hover {
-    background-color: #CE1126;
+    background-color: #d73549;
+    border-radius: 8px; 
   }
   
   section {
@@ -65,6 +66,10 @@
   }
   
   h1, h2 {
+    font-family: "pacifico"; "roboto"
+    margin-bottom: 1rem;
+  }
+  h5{
     margin-bottom: 1rem;
   }
   
@@ -73,7 +78,7 @@
   }
   
   footer {
-    background-color: #0038A8;
+    background-color: #0561ab;
     color: white;
     text-align: center;
     padding: 1rem;
@@ -89,7 +94,7 @@
   }
   
   input[type="submit"] {
-    background-color: #CE1126;
+    background-color: #0561ab;
     color: white;
     border: none;
     cursor: pointer;
@@ -98,7 +103,7 @@
   }
   
   input[type="submit"]:hover {
-    background-color: #0038A8;
+    background-color: #0561ab;
   }
   
   label {
@@ -122,5 +127,18 @@
   }
 
   .gold{
-    color: #FDBB30;
+    color: #fece44;
+  }
+
+  .logo-container {
+    text-align: center;
+    font-family: 'Pacifico', cursive;
+    font-size: 2rem; /* Adjust this value according to your desired logo text size */
+    color: #fece44; /* Filipino yellow */
+  }
+
+  .logo {
+    max-height: 75px; 
+    width: auto; 
+    
   }
